--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@nestjs/core": "^8.2.0",
     "@nestjs/cqrs": "^8.0.0",
     "@nestjs/mongoose": "^9.0.1",
+    "@nestjs/platform-express": "^8.2.0",
     "@nestjs/swagger": "^5.1.4",
     "luxon": "^2.1.1",
     "mongoose": "^6.0.12",
